--- a/blog.cabal
+++ b/blog.cabal
@@ -19,5 +19,7 @@ executable blog
                        MissingH == 1.3.*,
                        containers == 0.5.6.2,
                        bytestring == 0.10.6.0,
-                       filepath == 1.4.0.0
+                       filepath == 1.4.0.0,
+                       unix == 2.7.1.0,
+                       pandoc
 
